Revamp README with prerequisites, use case explanations and diagrams
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>